fix: Add margin-left to notification class for better alignment

--- a/storage/www/assets/styles/responsive-dashboard.css
+++ b/storage/www/assets/styles/responsive-dashboard.css
@@ -7,6 +7,6 @@
     .popup-box { width: 75%; margin-left: -20px; }
     .hamburger-menu { display: block; position: fixed; top: 0px; left: 0px; border-radius: 5px; font-size: 1.2em; padding: 20px; z-index: 2; }
     .data-card-video { width: 100%; height: 100%; }
-    .notification { font-size: 0.7em; width: 400px }
+    .notification { font-size: 0.7em; width: 400px; margin-left: -175px; }
     ul { font-size: 0.7em; }
 }
